--- a/medial-queries2/index.html
+++ b/medial-queries2/index.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Media Queries 2</title>
-    <link rel="stylesheet" href="main.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="a">a</div>
-      <div class="b">b</div>
-      <div class="c">c</div>
-      <div class="d">d</div>
-      <div class="e">e</div>
-      <div class="f">f</div>
+
+<head>
+  <meta charset="utf-8">
+  <title>Media Queries 2</title>
+  <link rel="stylesheet" href="main.css">
+</head>
+
+<body>
+
+  <div class="container-1">
+    <div class="a">
+      <h1> A </h1>
+      <p> text here </p>
     </div>
-  </body>
+
+    <div class="container-2">
+      <div class="b">
+        <h1> B </h>
+          <p> text here </p>
+      </div>
+
+      <div class="c">
+        <h1> C </h1>
+        <p> text here </p>
+      </div>
+
+      <div class="d">
+        <h1> D </h1>
+        <p>text here</p>
+      </div>
+
+      <div class="e">
+        <h1> E </h1>
+        <p> text here </p>
+      </div>
+    </div>
+
+    <div class="f">
+      <h1> F </h1>
+      <p> text here </p>
+    </div>
+    </div> 
+    
+</body>
+
 </html>
